Updated donations view

--- a/public/sass/partials/_table.scss
+++ b/public/sass/partials/_table.scss
@@ -5,7 +5,8 @@ table.table {
     }
   }
 
-  td, th {
+  td,
+  th {
     &.checkbox-cell {
       .b-checkbox.checkbox:not(.button) {
         margin-right: 0;
@@ -62,7 +63,9 @@ table.table {
       }
     }
 
-    .pagination-previous, .pagination-next, .pagination-link {
+    .pagination-previous,
+    .pagination-next,
+    .pagination-link {
       border-color: $button-border-color;
       color: $base-color;
 
@@ -74,6 +77,71 @@ table.table {
 }
 
 @include mobile {
+  .b-table {
+    .table-wrapper.has-mobile-cards {
+      thead {
+        display: none;
+      }
+      tfoot {
+        th {
+          border: 0;
+          display: inherit;
+        }
+      }
+      tr {
+        box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+        max-width: 100%;
+        position: relative;
+        display: block;
+        td {
+          border: 0;
+          display: inherit;
+          &:last-child {
+            border-bottom: 0;
+          }
+        }
+        &:not(:last-child) {
+          margin-bottom: 1rem;
+        }
+        &:not([class*="is-"]) {
+          background: inherit;
+          &:hover {
+            background-color: inherit;
+          }
+        }
+        &:not(.detail) {
+          &:not(.is-empty) {
+            &:not(.table-footer) {
+              td {
+                display: flex;
+                width: auto;
+                justify-content: space-between;
+                text-align: right;
+                border-bottom: 1px solid whitesmoke;
+                &:before {
+                  content: attr(data-label);
+                  font-weight: 600;
+                  padding-right: 0.5rem;
+                  text-align: left;
+                }
+              }
+              td.is-image-cell {
+                padding: 1rem 1rem 0 1rem;
+                .image {
+                  width: 6rem;
+                  height: 6rem;
+                  margin: 0 auto 0.5rem;
+                }
+              }
+            }
+          }
+        }
+      }
+      tr.detail {
+        margin-top: -1rem;
+      }
+    }
+  }
   .card {
     &.has-table {
       .b-table {
@@ -87,24 +155,25 @@ table.table {
     &.has-mobile-sort-spaced {
       .b-table {
         .field.table-mobile-sort {
-          padding-top: $default-padding * .5;
+          padding-top: $default-padding * 0.5;
         }
       }
     }
   }
   .b-table {
     .field.table-mobile-sort {
-      padding: 0 $default-padding * .5;
+      padding: 0 $default-padding * 0.5;
     }
 
     .table-wrapper.has-mobile-cards {
       tr {
         box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1);
-        margin-bottom: 3px!important;
+        margin-bottom: 3px !important;
       }
       td {
         &.is-progress-col {
-          span, progress {
+          span,
+          progress {
             display: flex;
             width: 45%;
             align-items: center;
@@ -112,11 +181,13 @@ table.table {
           }
         }
 
-        &.checkbox-cell, &.is-image-cell {
-          border-bottom: 0!important;
+        &.checkbox-cell,
+        &.is-image-cell {
+          border-bottom: 0 !important;
         }
 
-        &.checkbox-cell, &.is-actions-cell {
+        &.checkbox-cell,
+        &.is-actions-cell {
           &:before {
             display: none;
           }
@@ -142,7 +213,7 @@ table.table {
             .image {
               width: $table-avatar-size-mobile;
               height: auto;
-              margin: 0 auto $default-padding * .25;
+              margin: 0 auto $default-padding * 0.25;
             }
           }
         }
