--- a/views/donations.pug
+++ b/views/donations.pug
@@ -1,2 +1,68 @@
-extend dashboard 
+extend dashboard
+block prepend content
+    - var view = '/donations'
+    -var title = "Food donations"
+block append content
+    section.section.is-main-section
+      .tile.is-ancestor
+        +overviewTile('Claimed', '5.2 kg', 'placeholder')
+        +overviewTile('Available', '6.9 kg', 'placeholder')
+        +overviewTile('Collected', '2 of 6', 'placeholder')
+      .card.has-table.has-mobile-sort-spaced
+        header.card-header
+          p.card-header-title Donations
+        .card-content
+          .b-table.has-pagination
+            .table-wrapper.has-mobile-cards
+              table.table.is-fullwidth.is-hoverable.is-fullwidth
+                thead
+                  tr
+                    th
+                    th Name
+                    th Donation contents
+                    th Weight
+                    th Distance
+                    th Expiry date
+                    th
+                tbody
+                  tr
+                    td.is-image-cell
+                      .image
+                        img.is-rounded(src='https://avatars.dicebear.com/v2/initials/rebecca-bauch.svg')
+                    td(data-label='Name') Rebecca Bauch
+                    td(data-label='Donation contents') Daugherty-Daniel
+                    td(data-label='Weight') South Cory
+                    td(data-label='Distance') 1.7 km
+                    td(data-label='Expiry date')
+                      small.has-text-grey.is-abbr-like(title='Oct 25, 2020') Oct 25, 2020
+                    td.is-actions-cell
+                      .buttons.is-right
+                        button.button.is-small.is-success(type='button') View
+                          //span.icon O
+                  tr
+                  tr
+                    td.is-image-cell
+                      .image
+                        img.is-rounded(src='https://avatars.dicebear.com/v2/initials/rebecca-bauch.svg')
+                    td(data-label='Name') Rebecca Bauch
+                    td(data-label='Donation contents') Daugherty-Daniel
+                    td(data-label='Weight') South Cory
+                    td(data-label='Distance') 1.7 km
+                    td(data-label='Expiry date')
+                      small.has-text-grey.is-abbr-like(title='Oct 25, 2020') Oct 25, 2020
+                    td.is-actions-cell
+                      .buttons.is-right
+                        button.button.is-small.is-success(type='button') View
+                          //span.icon O
+            .notification
+              .level
+                .level-left
+                  .level-item
+                    .buttons.has-addons
+                      button.button.is-active(type='button') 1
+                      button.button(type='button') 2
+                      button.button(type='button') 3
+                .level-right
+                  .level-item
+                    small Page 1 of 3
 
