--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -11,14 +11,14 @@ block  header
 block content
   aside.aside.is-placed-left.is-expanded
     .aside-tools
-      a.aside-tools-label(href="/dashboard")
+      a.aside-tools-label(href="/donations")
           +logo(151, 32, '#ffffff')
     .menu.is-menu-main
       p.menu-label General
       ul.menu-list
         each item, index in h.sidemenuType1[0]
           li
-            a.has-icon(href=item.slug )
+            a.has-icon(href=item.slug class=(view === item.slug ? "is-active" : undefined))
               span.icon O
                 //- icon
               span.menu-item-label.has-text-weight-semibold #{item.title}
@@ -35,77 +35,8 @@ block content
       .level-left
         .level-item
           ul
-            li.title.is-size-2 Food donations
-  block primary
-    // p is default
-    // TO-DO move to donations route
-    section.section.is-main-section
-      .tile.is-ancestor
-        +overviewTile('Claimed', '5.2 kg', 'placeholder')
-        +overviewTile('Available', '6.9 kg', 'placeholder')
-        +overviewTile('Collected', '2 of 6', 'placeholder')
-      .card.has-table.has-mobile-sort-spaced
-        .card-header
-          p.card-header-title Donations
-        .card-content
-          .b-table.has-pagination
-            .table-wrapper.has-mobile-cards
-              table.table.is-fullwidth.is-striped.is-hoverable.is-sortable.is-fullwidth
-                thead
-                  tr
-                    th
-                    th Name
-                    th Donation contents
-                    th Weight (kg)
-                    th Distance
-                    th Expiry date
-                    th
-                tbody
-                  tr
-                    td.is-image-cell
-                      .image
-                        img.is-rounded(src='https://avatars.dicebear.com/v2/initials/rebecca-bauch.svg')
-                    td(data-label='Name') Rebecca Bauch
-                    td(data-label='Company') Daugherty-Daniel
-                    td(data-label='City') South Cory
-                    td.is-progress-cell(data-label='Progress')
-                      progress.progress.is-small.is-primary(max='100' value='79') 79
-                    td(data-label='Created')
-                      small.has-text-grey.is-abbr-like(title='Oct 25, 2020') Oct 25, 2020
-                    td.is-actions-cell
-                      .buttons.is-right
-                        button.button.is-small.is-primary(type='button')
-                          span.icon O
-                        button.button.is-small.is-danger.jb-modal(data-target='sample-modal' type='button')
-                          span.icon O
-                  tr
-                    td.is-image-cell
-                      .image
-                        img.is-rounded(src='https://avatars.dicebear.com/v2/initials/rebecca-bauch.svg')
-                    td(data-label='Name') Rebecca Bauch
-                    td(data-label='Company') Daugherty-Daniel
-                    td(data-label='City') South Cory
-                    td.is-progress-cell(data-label='Progress')
-                      progress.progress.is-small.is-primary(max='100' value='79') 79
-                    td(data-label='Created')
-                      small.has-text-grey.is-abbr-like(title='Oct 25, 2020') Oct 25, 2020
-                    td.is-actions-cell
-                      .buttons.is-right
-                        button.button.is-small.is-primary(type='button')
-                          span.icon O
-                        button.button.is-small.is-danger.jb-modal(data-target='sample-modal' type='button')
-                          span.icon O
-      .notification
-        .level
-          .level-left
-            .level-item
-              .buttons.has-addons
-                button.button.is-active(type='button') 1
-                button.button(type='button') 2
-                button.button(type='button') 3
-          .level-right
-            .level-item
-              small Page 1 of 3
+            li.title.is-size-2 #{title}
+
 
 
 
