--- a/views/donations.pug
+++ b/views/donations.pug
@@ -18,7 +18,7 @@ block append content
                 thead
                   tr
                     th
-                    th Name
+                    th Business
                     th Donation contents
                     th Weight
                     th Distance
