--- a/views/login.pug
+++ b/views/login.pug
@@ -2,10 +2,15 @@ extends layout
 include mixins/_loginForm.pug
 include mixins/_sideMessage.pug
 
+block prepend doc-header
+  html(class= "has-aside-left has-aside-mobile-transition has-navbar-fixed-top has-aside-expanded has-side-message")
+
 block content
-    .columns.is-centered.is-vcentered.is-full-height 
-        +sideMessage()
+    +sideMessage()
+    .columns.is-centered.is-vcentered.is-full-height
         .column.is-three-quarters
             +loginForm()
             a(href='/account/forgot') Forgotten password?
+
+block footer
 
