--- a/views/mixins/_sideMessage.pug
+++ b/views/mixins/_sideMessage.pug
@@ -1,8 +1,12 @@
 mixin sideMessage(msg)
-  .column.is-one-quarter
-    if msg 
-      h2.title.is-size-2= msg 
+  aside.aside.is-placed-left.is-expanded.is-side-message
+    if msg
+      h2.title.is-size-2= msg
     else
       - let i = Math.floor(Math.random()* (3 - 0) + 0)
-      h2.title.is-size-2 #{ h.foodFacts[i].fact }
-      span.subtitle.is-size-6 #{ h.foodFacts[i].source }
+      section.side-message.section.has-background-primary
+        h2.title.is-size-4
+          | #{ h.foodFacts[i].fact }
+        span.subtitle.is-size-6
+          | #{ h.foodFacts[i].source }
+        .side-illustration.has-background-white
