--- a/views/register.pug
+++ b/views/register.pug
@@ -3,14 +3,18 @@ include mixins/_registerForm
 include mixins/_formSteps
 include mixins/_sideMessage
 
+block prepend doc-header
+  html(class= "has-aside-left has-aside-mobile-transition has-navbar-fixed-top has-aside-expanded has-side-message")
+
 block content
-    .columns.is-centered.is-vcentered.is-full-height 
-        +sideMessage()
+    +sideMessage()
+    .columns.is-centered.is-vcentered.is-full-height
         .column.is-three-quarters
             +formSteps()
             +registerForm()
             a(href='/login') Already have an account?
 
+block footer
 
-block scripts 
+block scripts
     script(src="/dist/js/formHandler.js")
