--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,8 @@
 extends layout
 
 include mixins/_indexMenu
+include mixins/_sectionTitle
+include mixins/_goalCard
 
 block prepend mainMenu
   +indexMenu()
@@ -12,7 +14,7 @@ block content
           .columns.is-vcentered
             .column.is-half.is-hidden-desktop.my-6
               img.hero-illustration(src="heroIllustration.svg")
-            .column.is-half
+            .column.is-5
               p.title.is-2
                 | Reducing food waste!
               p.subtitle.is-5
@@ -22,32 +24,40 @@ block content
                 | At vero eos et accusam et justo duo dolores
               button.button.is-primary.is-large.is-hidden-touch Discover more
               button.button.is-primary.is-medium.is-hidden-desktop Discover more
-            .column.is-half.is-hidden-touch
+            .column.is-7.is-hidden-mobile
               img.hero-illustration(src="heroIllustration.svg")
-  section.section.has-text-centered
-    h1.title Our Goals
-  .container.is-widescreen.has-text-centered
-    .tile.is-ancestor
-      .tile.is-parent
-          .card.tile.is-child
-              .card-content
-                  .level.is-mobile
-                      .level-item
-                          .is-widget-label
-                              h3.subtitle.is-size-4.mb-1.is-spaced Example
-                              h1.title.has-text-weight-semibold.is-size-3 Example
-      .tile.is-parent
-          .goal.card.tile.is-child
-              .card-content
-                  img.image.is-96x96.mb-5(src="reduceGoal.svg")
-                  h1.title.is-4 Reducing food waste
-                  p.is-size-6 We aim to shrink the amount of food that is thrown away,
-                    | by giving it another life with someone else!
-      .tile.is-parent
-          .card.tile.is-child
-              .card-content
-                  .level.is-mobile
-                      .level-item
-                          .is-widget-label
-                              h3.subtitle.is-size-4.mb-1.is-spaced Example
-                              h1.title.has-text-weight-semibold.is-size-3 Example
+  +sectionTitle('Our goals')
+  .section.has-text-centered
+    .container.is-widescreen
+      .tile.is-ancestor
+        +goalCard(
+            'reduceGoal.svg',
+            'Reduce Food Waste',
+            'We aim to shrink the amount of food that is thrown away, by giving it another life with someone else!'
+          )
+        +goalCard(
+          'communityGoal.svg',
+          'Bring Together Communities',
+          'Gathering people of all ages and backgrounds together to enjoy activities with new friends!'
+        )
+        +goalCard(
+          'awarenessGoal.svg',
+          'Raise Awareness & Educate',
+          'We want to erase the negative stigma surrounding community fridges and make them a thing to be celebrated.'
+        )
+  section.section
+    .container.is-widescreen
+      .columns.is-vcentered
+        .column.is-5
+          h2.title.is-3 Why use pantree?
+          p.text
+            | Food waste is a growing problem due to the shelf life being so short because of food standards.
+            | However, most of the time the food items are still fresh and ready to eat. By using pantree,
+            | we aim to offer a new life for this wasted food by giving it to community fridges.
+          a.button.is-primary.is-medium.mt-5 Join us today!
+        .column.is-6.is-offset-1
+          .box
+          .box
+
+
+
