Updated setup view, fixed register view

--- a/public/sass/partials/_side-message.scss
+++ b/public/sass/partials/_side-message.scss
@@ -1,6 +1,6 @@
 aside {
     .side-message {
-        height: 92vh;
+        height: calc(100vh - 3.25rem);
         display: flex;
         flex-direction: column;
         flex-grow: 1;
