--- a/views/index.pug
+++ b/views/index.pug
@@ -29,7 +29,7 @@ block content
 
             .column.is-half.is-hidden-touch
               img.hero-illustration(src="heroIllustration.svg")
-            .column.is-7.is-hidden-mobile
+            .column.is-7.is-hidden-desktop
               img.hero-illustration(src="heroIllustration.svg")
   +sectionTitle('Our goals')
   .section.has-text-centered
