--- a/views/mixins/_setupForm.pug
+++ b/views/mixins/_setupForm.pug
@@ -1,18 +1,28 @@
-mixin setupForm()
-    .card
-        .card-content
-            form.container.is-max-desktop(action="" method="POST")
-                h3.title.is-3.form-title Setup
-                hr
-                .field.form-section.is-grouped(section-name="Sign up to pantree as,"
-                section="userType")
+include _formSteps
 
-                    label.radio
-                        input(type='radio' name='accountType')
-                        |     Community Fridge
-                    label.radio
-                        input(type='radio' name='accountType')
-                        |     Local Business
-                .field
-                    .control
-                        button.button.is-medium.is-fullwidth.is-primary(type="submit") Submit
+mixin setupForm()
+    .columns.is-centered.is-vcentered.is-full-height
+        .column.is-three-quarters.is-two-fifths-widescreen
+            +formSteps()
+            .card
+                .card-content
+                    form.container.is-max-desktop(action="" method="POST")
+                        h3.title.is-3.form-title Setup
+                        hr
+                        .field.is-flex.is-grouped.form-section(section-name="Sign up to pantree as,"
+                        section="userType")
+                            button.button.has-img.is-light.is-fullwidth.mr-3 Community Fridge
+                                img.image.is-128x128(src="reduceGoal.svg" alt="Fridge icon")
+                            button.button.has-img.is-light.is-fullwidth Food Business
+                                img.image.is-128x128(src="reduceGoal.svg" alt="Fridge icon")
+                        .field.form-section(section-name="registration" section="setupInfo")
+                            // put stuff here
+                        .field.form-section(section-name="What we found" section="confirmInfo")
+                            // put stuff here
+                        .field.form-section(section-name="Set opening times" section="openingTimes")
+                            // put stuff here
+                        .field.form-section(section-name="Review & Submit" section="Submit")
+                            // put stuff here
+                        hr
+                        .buttons.is-grouped
+                                button.button.is-medium.is-fullwidth.is-primary.primary-action(type="submit") Submit
