--- a/public/sass/partials/_aside.scss
+++ b/public/sass/partials/_aside.scss
@@ -31,7 +31,7 @@
     &.is-side-message {
       top: 3.25rem;
       z-index: 0;
-      height: 92vh;
+      height: calc(100vh - 3.25rem);
       width: $aside-width-message;
     }
     .menu-list {
