--- a/public/sass/partials/_theme-default.scss
+++ b/public/sass/partials/_theme-default.scss
@@ -37,7 +37,7 @@ $menu-item-active-background-color: $primary-light;
 
 /* Aside: specifics */
 $aside-width: $size-base * 14;
-$aside-width-message: $size-base * 16;
+$aside-width-message: 45vh;
 $aside-mobile-width: $size-base * 15;
 $aside-icon-width: $size-base * 3;
 $aside-submenu-font-size: $size-base * 0.95;
