--- a/views/email/styles.css
+++ b/views/email/styles.css
@@ -7,7 +7,7 @@ img {
   max-width: 100%; }
 
 body {
-  background-color: #303030;
+  background-color: #F5F5F9;
   font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   font-size: 14px;
@@ -57,7 +57,7 @@ table {
 ------------------------------------- */
 .main {
   background: #fff;
-  border-top:20px solid #fff200;
+  border-top:20px solid #9882E4;
   width: 100%; }
 
 .wrapper {
@@ -84,7 +84,7 @@ h1,
 h2,
 h3,
 h4 {
-  color: #000000;
+  color: #463A82;
   font-family: sans-serif;
   font-weight: 400;
   line-height: 1.4;
@@ -112,7 +112,7 @@ ol {
     margin-left: 5px; }
 
 a {
-  color: #fff200;
+  color: #9882E4;
   text-decoration: underline; }
 
 /* -------------------------------------
@@ -131,10 +131,10 @@ a {
     text-align: center; }
   .btn a {
     background-color: #ffffff;
-    border: solid 1px #fff200;
+    border: solid 1px #9882E4;
     border-radius: 5px;
     box-sizing: border-box;
-    color: #fff200;
+    color: #9882E4;
     cursor: pointer;
     display: inline-block;
     font-size: 14px;
@@ -145,12 +145,12 @@ a {
     text-transform: capitalize; }
 
 .btn-primary table td {
-  background-color: #fff200; }
+  background-color: #9882E4; }
 
 .btn-primary a {
-  background-color: #fff200;
-  border-color: #fff200;
-  color: #3a3a3a; }
+  background-color: #9882E4;
+  border-color: #9882E4;
+  color: #ffffff; }
 
 /* -------------------------------------
     OTHER STYLES THAT MIGHT BE USEFUL
@@ -255,9 +255,9 @@ hr {
     line-height: inherit !important;
     text-decoration: none !important; }
   .btn-primary table td:hover {
-    background-color: #00ffde !important; }
+    background-color: #8F78E2 !important; }
   .btn-primary a:hover {
-    background-color: #00ffde !important;
-    border-color: #00ffde !important; } }
+    background-color: #8F78E2 !important;
+    border-color: #8F78E2 !important; } }
 
 
