--- a/views/reset.pug
+++ b/views/reset.pug
@@ -1,5 +1,7 @@
 extends layout
 
+include mixins/_sideMessage
+
 block content
   .columns.is-centered.is-vcentered.is-full-height 
         +sideMessage()
@@ -21,4 +23,4 @@ block content
                       i.fas.fas-lock        
                 .field 
                   .control 
-                    button.button.is-medium.is-fullwidth.is-primary(type="submit" value="Reset Password")
+                    button.button.is-medium.is-fullwidth.is-primary(type="submit" value="Reset Password") Reset Password
