--- a/public/sass/partials/_form.scss
+++ b/public/sass/partials/_form.scss
@@ -61,3 +61,9 @@ select {
 [section="userType"] {
   display: flex;
 }
+label.pt-0 {
+  color: white;
+}
+label[for="day"] {
+  min-width: 6.5rem !important;
+}
