--- a/views/mixins/_setupForm.pug
+++ b/views/mixins/_setupForm.pug
@@ -1,4 +1,5 @@
 include _formSteps
+include _workingHoursInput
 
 mixin setupForm()
     .columns.is-centered.is-vcentered.is-full-height
@@ -7,21 +8,27 @@ mixin setupForm()
             .card
                 .card-content
                     form.container.is-max-desktop(action="" method="POST")
+                        label.label.is-size-4.has-text-weight-light(for='step') Step 1
                         h3.title.is-3.form-title Setup
                         hr
                         .form-section(section-name="Sign up to pantree as,"
                         section="userType")
                             button.button.has-img.is-light.is-fullwidth.mr-3(user-type="Community Fridge") Community Fridge
-                                img.image.is-128x128(src="reduceGoal.svg" alt="Fridge icon")
+                                img.image.is-128x128.mb-2(src="fridgeIcon.svg" alt="Fridge icon")
                             button.button.has-img.is-light.is-fullwidth(user-type="Food Business") Food Business
-                                img.image.is-128x128(src="reduceGoal.svg" alt="Business icon")
-                        .field.form-section(section-name="Registration" section="setupInfo")
+                                img.image.is-128x128.mb-2(src="businessIcon.svg" alt="Business icon")
+                        .field.form-section(section-name="Hygine inspection" section="setupInfo")
+                            article.message.is-info
+                                .message-body
+                                    | In order to join the pantree platform, we need to confirm that you have passed a hygiene inspection by the
+                                    strong  Food standards agency.
+                                    |  To do so please fill out the form below.
                             .field
-                                label.label(for='name') name
+                                label.label(for='establishment-name') Establishment name
                                 .control
-                                    input.input(type="text" value="" name='name' required)
+                                    input.input(type="text" value="" name='establishment-name' required)
                             .field
-                                label.label(for='street') Street
+                                label.label(for='street') House number, Street
                                 .control
                                     input.input(type="text" value="" name='address-street' required)
                             .field
@@ -31,16 +38,31 @@ mixin setupForm()
                             .field
                                 label.label(for='post-code') Post code
                                 .control
-                                    input.input(type="text" value="" name='address-town' required)
-                        .field.form-section(section-name="Confirm match" section="confirmInfo")
-                            .field
-                                label.label(for='post-code-confirm') Post code
-                                .control
-                                    input.input(type="text" value="" name='address-town')
-                            #map
+                                    input.input(type="text" value="" name='address-post-code' required)
+                        .field.form-section(section-name="Here is what we found" section="confirmInfo")
+                            article.message.is-success
+                                .message-body
+                                    | Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    strong Pellentesque risus mi
+                                    | , tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum
+                                    a felis venenatis
+                                    |  efficitur. Aenean ac
+                                    em eleifend lacus
+                                    | , in mollis lectus.
+                            p.title.is-3.establishment-name
+                            p.subtitle.is-5.has-text-grey-light.establishment-type
+                            label.has-text-weight-semibold.mb-1(for='adress') Address
+                            p.subtitle.is-5.has-text-grey.address
+                            label.has-text-weight-semibold.mb-1(for='post-code') Post code
+                            p.subtitle.is-5.has-text-grey.post-code
                         .field.form-section(section-name="Set opening times" section="openingTimes")
-                            label(for='switchRoundedDefault') Switch rounded default
-                            input#switchRoundedDefault.switch.is-rounded(type='checkbox' name='switchRoundedDefault' checked='checked')
+                            +workingHoursInput('Monday')
+                            +workingHoursInput('Tuesday')
+                            +workingHoursInput('Wednesday')
+                            +workingHoursInput('Thursday')
+                            +workingHoursInput('Friday')
+                            +workingHoursInput('Saturday')
+                            +workingHoursInput('Sunday')
                         .field.form-section(section-name="Review & Submit" section="submitSetupInfo")
                             .title Yooooooo!
                         hr
