updated setup route & view

--- a/views/mixins/_setupForm.pug
+++ b/views/mixins/_setupForm.pug
@@ -7,7 +7,7 @@ mixin setupForm()
             +formSteps()
             .card
                 .card-content
-                    form.container.is-max-desktop(action="" method="POST")
+                    form.container.is-max-desktop(action="/setup" method="POST")
                         label.label.is-size-4.has-text-weight-light(for='step') Step 1
                         h3.title.is-3.form-title Setup
                         hr
