Fixed relative path

--- a/views/mixins/_setupForm.pug
+++ b/views/mixins/_setupForm.pug
@@ -14,9 +14,9 @@ mixin setupForm()
                         .form-section(section-name="Sign up to pantree as,"
                         section="userType")
                             button.button.has-img.is-light.is-fullwidth.mr-3(user-type="Community Fridge") Community Fridge
-                                img.image.is-128x128.mb-2(src="fridgeIcon.svg" alt="Fridge icon")
+                                img.image.is-128x128.mb-2(src="/fridgeIcon.svg" alt="Fridge icon")
                             button.button.has-img.is-light.is-fullwidth(user-type="Food Business") Food Business
-                                img.image.is-128x128.mb-2(src="businessIcon.svg" alt="Business icon")
+                                img.image.is-128x128.mb-2(src="/businessIcon.svg" alt="Business icon")
                         .field.form-section(section-name="Hygine inspection" section="setupInfo")
                             article.message.is-info
                                 .message-body
