--- a/views/setup.pug
+++ b/views/setup.pug
@@ -8,5 +8,5 @@ block content
     +setupForm()
 
 block prepend scripts
-    script(type="module" src="./dist/js/formSectionHandlers.js")
+    script(type="module" src="/dist/js/formSectionHandlers.js")
 
