current version of setup form

--- a/views/mixins/_setupForm.pug
+++ b/views/mixins/_setupForm.pug
@@ -17,7 +17,7 @@ mixin setupForm()
                                 img.image.is-128x128.mb-2(src="/fridgeIcon.svg" alt="Fridge icon")
                             button.button.has-img.is-light.is-fullwidth(user-type="Business") Food Business
                                 img.image.is-128x128.mb-2(src="/businessIcon.svg" alt="Business icon")
-                        .field.form-section(section-name="Hygine inspection" section="setupInfo")
+                        .field.form-section(section-name="Hygiene inspection" section="setupInfo")
                             article.message.is-info
                                 .message-body
                                     | In order to join the pantree platform, we need to confirm that you have passed a hygiene inspection by the
